# L3_Info_Codage

./: CMakeLists.txt  Makefile
include/: agent_life_cycle.h  binaire_formate.h  codeur.h  etalement.h  hadamard.h  matrice.h  pseudo_aleatoire.h
src/: agent_life_cycle.c  binaire_formate.c  codeur.c  etalement.c  hadamard.c  matrice.c  pseudo_aleatoire.c  test_codeur.c  test_matrice.c  test_pseudo_aleatoire.c  tp1_A.c
src/targets/: tp1_A.c
src/tests/: test_agent_life_cycle.c  test_agent_life_cycle2.c  test_binaire_formate.c  test_codeur  test_codeur.c  test_codeur_artm.c  test_codeur_hdbn.c  test_compression_arithmetique.c  test_compression_arithmetique.txt  test_matrice  test_matrice.c  test_pseudo_aleatoire  test_pseudo_aleatoire.c
